--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 .r {
     color: red;
 }
-tbody td {
+/*tbody td {
     padding: 5px 0;
     font-family: "Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
@@ -23,7 +23,7 @@ table, th, td {
 }
 table, th, td {
     border: 1px solid #03a9f4a8;
-}
+}*/
 @media screen and (min-width: 500px)
 /* Desktop */
 
