--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     border-style: groove;
     text-shadow: 1px 1px #2db68da9;
     padding-top: 10px;
-    padding-bottom: 10px
+    padding-bottom: 10px;
 }
 .r {
     color: red;
