--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+*{
+    box-sizing: border-box ;
+}
+html, body {
+     overflow-x: hidden;
+}
+body {
+    position: relative;
+}
+
 .RECORD {
     background-color: #66CDAA;
     color: black;
