--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     color: black;
     font-weight: 700;
     font-style: Lucida;
-    font-size: large;
+    font-size: medium;
     border-width: 5px;
     border-color: #7FFFD4;
     border-style: groove;
@@ -61,7 +61,7 @@ table, th, td {
         padding: 4px 1px
     }
     td {
-        font-size: 3;
+        font-size: 3px;
         padding: 4px 1px
     }
 }
@@ -77,11 +77,11 @@ table, th, td {
         border-collapse: separate;
     }
     th {
-        font-size: 7px;
+        font-size: 5px;
         padding: 3px 1px
     }
     td {
-        font-size: 2;
+        font-size: 2px;
         padding: 3px 1px
        
     }
