--- a/styles.css
+++ b/styles.css
@@ -38,11 +38,11 @@ table, th, td {
     }
     th {
         font-size: 12px;
-        padding: 5px 3px
+        padding: 5px 3px;
     }
     td {
         font-size: 7px;
-        padding: 5px 3px
+        padding: 5px 3px;
     }
 }
 
@@ -57,12 +57,12 @@ table, th, td {
         border-collapse: separate;
     }
     th {
-        font-size: 20px;
-        padding: 4px 1px
+        font-size: 10px;
+        padding: 4px 1px;
     }
     td {
-        font-size: 10px;
-        padding: 4px 1px
+        font-size: 7px;
+        padding: 4px 1px;
     }
 }
 
@@ -77,12 +77,12 @@ table, th, td {
         border-collapse: separate;
     }
     th {
-        font-size: 20px;
-        padding: 3px 1px
+        font-size: 10px;
+        padding: 3px 1px;
     }
     td {
-        font-size: 10px;
-        padding: 3px 1px
+        font-size: 7px;
+        padding: 3px 1px;
        
     }
 }
